# ros-mobile-robot

./: .gitignore  README.md
doc/: adding_sensor.md  adding_stl.md  converting_urdf.md  create_ros_package.md  creating_urdf.md  generic.md  simulating.md
mobile_robot/: CMakeLists.txt  package.xml
mobile_robot/launch/: robot.launch  teleop.launch
mobile_robot_base/: CMakeLists.txt  package.xml
mobile_robot_description/: CMakeLists.txt  package.xml
mobile_robot_description/config/: rviz_config.rviz
mobile_robot_description/launch/: desc.launch  rviz.launch  state_publisher.launch
mobile_robot_description/urdf/: robot.urdf
mobile_robot_description/xacro/: robot.xacro
mobile_robot_simulation/: CMakeLists.txt  package.xml
mobile_robot_simulation/config/: diffdrive.yaml
mobile_robot_simulation/launch/: gazebo.launch  state_publisher.launch
