<?xml version="1.0"?>
<package>
  <name>mobile_robot</name>
  <version>0.1.0</version>
  <description>The mobile_robot package which is the root package for the ROS packages for a simulated mobile robot example</description>

  <maintainer email="contact@prajankya.me">prajankya</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://prajankya.me/articles/mobile_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mobile_robot_base</build_depend>
  <build_depend>mobile_robot_description</build_depend>
  <build_depend>mobile_robot_simulation</build_depend>

  <run_depend>mobile_robot_base</run_depend>
  <run_depend>mobile_robot_description</run_depend>
  <run_depend>mobile_robot_simulation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
