<?xml version="1.0"?>
<package>
  <name>mobile_robot_base</name>
  <version>0.1.0</version>
  <description>The mobile_robot_base package contains programs/ scripts for running the basic robot</description>

  <maintainer email="contact@prajankya.me">prajankya</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://prajankya.me/articles/mobile_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
