<?xml version="1.0"?>
<package>
	<name>mobile_robot_description</name>
	<version>0.1.0</version>
	<description>The mobile_robot_description package contains all the parts and models and basic scripts which describe the robot.</description>

	<maintainer email="contact@prajankya.me">prajankya</maintainer>

	<license>LGPLv3</license>

	<url type="website">http://prajankya.me/articles/mobile_robot</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>joint_state_publisher</build_depend>
	<build_depend>robot_state_publisher</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>xacro</build_depend>

	<run_depend>joint_state_publisher</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>xacro</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
