<?xml version="1.0"?>
<package>
	<name>mobile_robot_simulation</name>
	<version>0.1.0</version>
	<description>The mobile_robot_simulation package</description>

	<maintainer email="contact@prajankya.me">prajankya</maintainer>

	<license>LGPLv3</license>

	<url type="website">http://prajankya.me/articles/mobile_robot</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>gazebo</build_depend>

	<run_depend>gazebo</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
